--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth_service",
+  "name": "react-redux-typescript-auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -79,3 +79,4 @@
     "prettier": "^2.7.1"
   }
 }
+
