--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "concurrently": "^7.3.0",
     "http-proxy-middleware": "^2.0.6",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -39,14 +40,9 @@
     "lint": "eslint . + prettier",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "jsonServer": "json-server --watch --port=3001 db.json",
-    "concurrently": "concurrently 'yarn start' 'yarn jsonServer' "
+    "concurrently": "concurrently 'yarn start' 'yarn run jsonServer' "
   },
   "homepage": "./",
-  "engines": {
-    "node": ">=18.5.0",
-    "npm": ">=8.12.1",
-    "yarn": ">=1.22.17"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
